@@ -387,3 +387,32 @@ tasks.register("makeLibMixinableTask", MakeLibMixinableTask) {
 tasks.named("build") {
     finalizedBy tasks.named("makeLibMixinableTask")
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+    ]
+    options.compilerArgs += ['-Xplugin:T88ClientHandlerWrapper']
+}
+
+abstract class JarFromScratchAlias extends DefaultTask {
+    @Internal
+    abstract RegularFileProperty getArchiveFile()
+    @Internal
+    abstract Property<String> getArchiveFileName()
+
+    @TaskAction
+    void report() {
+        logger.lifecycle("jarFromScratch -> {}", archiveFile.get().asFile)
+    }
+}
+
+tasks.register("jarFromScratch", JarFromScratchAlias) {
+    dependsOn "jar"
+    archiveFile.set(tasks.named("jar").flatMap { it.archiveFile })
+    archiveFileName.set(tasks.named("jar").flatMap { it.archiveFileName })
+}
